--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Clock</title>
   </head>
 
   <body>
