--- a/index.html
+++ b/index.html
@@ -19,12 +19,27 @@
   <body>
     <div class="img"></div>
 
-    <div class="clock">
-      <p id="hours"></p>
-      <span>:</span>
-      <p id="minutes"></p>
-      <span>:</span>
-      <p id="seconds"></p>
+    <div class="wrapper">
+      <div class="dates">
+        <div>
+          <p id="weekdays"></p>
+        </div>
+        <div class="numbers">
+          <p id="days"></p>
+          <span>/</span>
+          <p id="months"></p>
+          <span>/</span>
+          <p id="years"></p>
+        </div>
+      </div>
+
+      <div class="clock">
+        <p id="hours"></p>
+        <span>:</span>
+        <p id="minutes"></p>
+        <span>:</span>
+        <p id="seconds"></p>
+      </div>
     </div>
 
     <script src="app.js"></script>
